# openenv-business-sim-1

./: .env.example  README.md  app.py  inference.py  pyproject.toml  validate.py
scratch/: check_scores.py
server/: app.py
src/: business_sim_env.py
src/tasks/: task_easy.py  task_hard.py  task_medium.py
