[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "business-sim-env"
version = "0.1.0"
description = "Business Simulation Environment OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "httpx",
    "pyyaml",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:run"
